src/test/deca/syntax/valid/synt/float_with_f_suffix.deca
/*
    Description : Ajout du suffixe f à un nombre flottant

    Résultat : OK
*/
{
    float x = 5.2f;
}
