src/test/deca/syntax/invalid/synt/invalid_float_hex_assign_to_float.deca
/*
    Description : Assignation d'un nombre en notation hexadécimale erronnée à un flottant

    Résultat : Erreur syntaxique
*/
{
    float x = 0xAGAP5f;
}
